kubernetes/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spotify-sync
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spotify-sync-ingress
  namespace: spotify-sync
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: spotify-sync.anurag.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spotify-sync-service
                port:
                  number: 80
  tls:
    - secretName: spotify-sync-anurag-sh-tls
      hosts:
        - spotify-sync.anurag.sh
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spotify-sync-deploy
  namespace: spotify-sync
spec:
  selector:
    matchLabels:
      app: spotify-sync-app
  replicas: 1
  template:
    metadata:
      labels:
        app: spotify-sync-app
    spec:
      containers:
        - name: spotify-sync
          image: ghcr.io/accurate0/spotify-sync:latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: spotify-sync-service
  namespace: spotify-sync
spec:
  selector:
    app: spotify-sync-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
